tests/NormalTests/paczka1/fuzzy1/86425376.err
Error in line 7: A293 A293 82,6
Error in line 12: UM2rV6eF A96 40,08
Error in line 20: A293 S986 142,0
